fix: invalid text align in voice popover on yandex disk

--- a/src/styles/components/voice-popover.scss
+++ b/src/styles/components/voice-popover.scss
@@ -71,6 +71,7 @@
   transform-origin: top left;
 
   @include shared.vot-font-family;
+  text-align: left !important;
 
   &,
   & * {
